Prueba nro no recuerdo

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:KaGkbILCFkUvANWGTxOTodGmqqgBIiSU@viaduct.proxy.rlwy.net:37155/railway
+DATABASE_URL=postgresql://postgres:xuASoRuFJLZPZJDzZcITTsdwJwWEbwIF@monorail.proxy.rlwy.net:48786/railway
